# CeresTest

./: CMakeLists.txt  main.cpp
test_data/: eq100_rug.txt  eq101_rug.txt  eq102_rug.txt  eq103_rug.txt  eq110_rug.txt  eq111_rug.txt  eq112_rug.txt  eq120_rug.txt  eq121_rug.txt  eq130_rug.txt  eq200_rug.txt  eq201_rug.txt  eq202_rug.txt  eq203_rug.txt  eq210_rug.txt  eq211_rug.txt  eq212_rug.txt  eq220_rug.txt  eq221_rug.txt  eq230_rug.txt
